fixed all tests in JavaPathtoJavaUrl